fix: floating label z-index in compare page

--- a/style/compare-container.styl
+++ b/style/compare-container.styl
@@ -14,6 +14,7 @@
     top 2%
     color #381794
     font-weight bold
+    z-index 4
 
   .flex
     height 100%
